--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "type": "module",
   "scripts": {
     "start": "nodemon src/importData.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chai": "^5.1.0",
     "dotenv": "^16.4.5",
-    "mocha": "^10.3.0",
+    "esm": "^3.2.25",
     "mongoose": "^8.2.2",
     "read-excel-file": "^5.7.1"
   },
   "devDependencies": {
+    "chai": "^5.1.0",
+    "mocha": "^10.3.0",
     "nodemon": "^3.1.0"
   }
 }
